# fedgpt-py

./: .gitignore  README.md  pyproject.toml  run-client.sh  run-server.sh
client/: Dockerfile  client.py  main.py  run-client.sh  utils.py
client/models/: dataset.py  engine.py
models/: dataset.py  engine.py  gpt.py
server/: Dockerfile  main.py  requirements.txt  run-server.sh  strategy.py  utils.py
server/models/: dataset.py  gpt.py
